v0.9.2
- Fixed bugs
- Fixed API to match with eXe elp id scan in latest eXe build
- Tested with course publish and update against eXe
- Tested with course invitation and upadte against eXe and made necessary changes.
- Set logging to include User access to reporting and logging in and logging out.
- Set up logging such that these request go to the file logs/umclouddj.log


v0.9.1
-Code comment, code clean, security enhancements and bug fixes
- Further code coverage and unit tests

v0.9.0
- Fixed /umlrs/statements on login giving error. (using string conversion as dict was being returned)
- Updated ADL_LRS fix for /statemetns/ 
- Updated development set up script to account for ADL_LRS cachced databases.
- Fixed exe_do export bug when elp file name isdiff from name in contentv3.xml. We get the name from the content xml.
- Fixed calculate_statement() bug of duplication.
- Fixed jQuery bug and div mismatch in base.html and reporting htmls
- Fixed bug in block upload (syntax error in prefix check for tincan)
- Fixed bug that gives elp xml name in the export as url.
- Updated new block page and backend to accept multiple elp files uploaded in one form.
- Added lrs and internal checks for Afghan literacy course
- Bunch of bug fixes.
- Fixed bug in putting connections to wordpress xmlrpc in a try except cage.
- Modified sendelpfile to update a file with the same elpid 
- Modified elp upload to update
- Modified sendelpfile for individual uploads to be converted to courses and publishers auto assigned
- Bug fixes
- /auth/ will redirect to login if it isn't a POST request
- set up invitation api and checking invitation views.
- Removed sendtestlogs
- Email sent logic finished. Updated git push login for EMAIL settings in settings.py
- Updated assigned_courses to print out assigned courses for courses outside a user's organisation if he/she is individual organisation. We use this for invitation based assignments.

v0.8.7